# ROS_Project

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/assessment/: goals  t2  t3  task1  task2  task3  task5
devel/lib/pkgconfig/: add_gaussian_noise.pc  assessment.pc  dummy_localization.pc
devel/share/add_gaussian_noise/cmake/: add_gaussian_noiseConfig.cmake
devel/share/assessment/cmake/: assessmentConfig.cmake
devel/share/dummy_localization/cmake/: dummy_localizationConfig.cmake
src/assessment/: CMakeLists.txt  assessment.launch  map.yaml  package.xml
src/assessment/src/: costmap2D.yaml  goals.cpp  t2.cpp  t2.h  t3.cpp  task1.cpp  task3.cpp  task4.cpp  task5.cpp  task5.py
